Added autocomplete to off

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -10,7 +10,7 @@
         </form>
     <form action="/" method="post">
         <div class="item">
-            <input type="text" name="itemz" placeholder="New Item" />
+            <input type="text" name="itemz" placeholder="New Item" autocomplete="off"/>
             <button type="submit" value="<%= curDay %>" name="lis">+</button>
         </div>
     </form>
